// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots IKContext Image With Context 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKContext Overriding Url Parameter 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/utkace/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With LQIP With Nested Path 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:q-20,bl-6/sample-folder/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With LQIP With Path With No Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/tr:q-20,bl-6/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With LQIP With Path With Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/tr:h-300,w-400:q-20,bl-6/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With LQIP With Src With No Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=q-20%2Cbl-6"
/>
`;

exports[`Storyshots IKImage Image With LQIP With Src With Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cw-400%3Aq-20%2Cbl-6"
/>
`;

exports[`Storyshots IKImage Image With Leading Slashes In Path 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With No Public Key 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With No Url Endpoint 1`] = `<!---->`;

exports[`Storyshots IKImage Image With Path 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With Query Parameters 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&version=5&name=check"
/>
`;

exports[`Storyshots IKImage Image With Src 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKImage Image With Src Query Parameters 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?foo=bar&ik-sdk-version=vuejs-1.0.6&version=5&name=check"
/>
`;

exports[`Storyshots IKImage Image With Trailing Slashes In Url Endpoint 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6"
/>
`;

exports[`Storyshots IKUpload Image Upload 1`] = `
<input
  type="file"
/>
`;

exports[`Storyshots IKUpload Image Upload No Authentication 1`] = `
<input
  type="file"
/>
`;

exports[`Storyshots IKUpload Image Upload With All Props 1`] = `
<input
  type="file"
/>
`;

exports[`Storyshots IKUpload Image Upload With No Custom Coordinates 1`] = `
<input
  type="file"
/>
`;

exports[`Storyshots IKUpload Image Upload With No Tags 1`] = `
<input
  type="file"
/>
`;

exports[`Storyshots Transformations Image With Chained Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cw-400%3Art-90"
/>
`;

exports[`Storyshots Transformations Image With Non Existing Transformation With Existing Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cfoo-bar"
/>
`;

exports[`Storyshots Transformations Image With Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Transformations Image With Transformation Position As Path Passing Src 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Transformations Image With Transformation Position As Query 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=h-300%2Cw-400"
/>
`;

exports[`Storyshots Transformations Image Without Existing Transformation 1`] = `
<img
  class="ik-image"
  src="https://ik.imagekit.io/your_imagekit_id/default-image.jpg?ik-sdk-version=vuejs-1.0.6&tr=foo-bar"
/>
`;
